test: keep HA1205 contract Java 8 compatible